--- a/training/index.qmd
+++ b/training/index.qmd
@@ -3,6 +3,29 @@
 ***This book is a work in progress. Please visit this again as chapters
 are being added and modified.***
 
+The approaches presented here use the **SpaDES** family of packages and
+associated packages, like `reproducible` and `Require`, that we have
+developed to face a variety of issues that we experienced during our own
+journeys as modellers and, more generally, scientists.
+
+Many of these issues we faced because most of us were ecologists by
+training (not computer scientists, not engineers, etc.), who lacked a
+strong programming foundation. So, we expect many who have other
+backgrounds and maybe very strong programming skills to find this set of
+solutions foreign and perhaps unnecessary, limited, or over-complicated
+for many applications outside the realm of ecological sciences. We
+certainly don't expect NASA scientists to overhaul their own workflows
+and follow ours -- but feel free too and send us your feedback!
+
+Still, we hope that many ecologists and those in related sciences (e.g.
+forestry, wildlife management, etc.), academics or practitioners, can
+appreciate the value of transforming their work into R^3^T, nimble
+workflows and find these solution useful. Mostly we hope that ecological
+modellers can embrace these tools to work towards expanding the
+ecological modelling community and the reusability and testing of the
+models it produces.
+
+
 # Acknowledgements {.unnumbered}
 
 We thank the various contributors, SpaDES developers and SpaDES users
