--- a/training/TroubleshootingPackageInstallation.qmd
+++ b/training/TroubleshootingPackageInstallation.qmd
@@ -129,6 +129,27 @@ The solution will depend on the reason why the dependency package failed
 to install. See solutions in [Package has already been loaded] and
 [00LOCK folder issues].
 
+### Package version cannot be met or found
+
+When `Require` is used to install packages[^1], it uses various caching
+mechanisms. If a package can't be found, or there is an
+unexplainable installation failure clearing the package cache may fix it.
+
+#### Potential solutions
+
+Try purging the cache with one or more of these:
+
+```{r}         
+## Can't find the package remotely
+Require::purgeCache()
+
+## Can't install a particular package, e.g., ggplot2
+Require::clearRequirePackageCache(packages = "ggplot2")
+
+## The above didn't work, clear ALL packages from local cache
+Require::purgeCache(packages = TRUE)
+```
+
 ## Installed a package, but it isn't showing up
 
 ### You installed it to a different library
@@ -182,3 +203,7 @@ An alternative way to address package management is using the
 [`renv`](https://RStudio.github.io/renv/articles/renv.html) package.
 Some people have great success with this. Some of us find it not very
 amenable to modular workflows.
+
+[^1]: For instance, `SpaDES.project` functions and
+    `SpaDES.core::simInit()` internally use `Require` to install package
+    dependencies specified by the user or modules.
