--- a/training/NewModuleIntro.qmd
+++ b/training/NewModuleIntro.qmd
@@ -32,7 +32,8 @@ knitr::knit_hooks$set(output = function(y, options) {
 })
 
 if (!require("Require")) {
-  install.packages("Require", repos = c("https://predictiveecology.r-universe.dev", getOption("repos")))
+  install.packages("Require", repos = c("https://predictiveecology.r-universe.dev", getOption("repos")),
+                   dependencies = TRUE)
 }
 ```
 
