--- a/training/NewModuleIntro.qmd
+++ b/training/NewModuleIntro.qmd
@@ -15,6 +15,7 @@ editor_options:
 
 ```{r setup}
 #| include: false
+#| eval: true
 
 ## truncate text output
 hook_output <- knitr::knit_hooks$get("output")
@@ -66,7 +67,9 @@ Step 1 -- move the code to an "init" event. This "init" even is a
 convention that SpaDES uses. A module must always have an "init" event.
 This is the only code that is "definitely run" in a module.
 
-```{r newModule, eval=TRUE}
+```{r newModule}
+#| eval: true
+
 Require::Require(c("reproducible", "SpaDES.core"), repos = c("https://predictiveecology.r-universe.dev", getOption("repos")))
 
 # make a module
@@ -89,7 +92,9 @@ For now, we just say, *if you want to keep an object, assign it to "sim"*.
 We will explain this in much more detail later. Here, we want to keep the `model` 
 that we fit. But we don't care about the `x` and `y`. So we assign the `model` to `sim`. 
 
-```{r, eval=TRUE}
+```{r}
+#| eval: true
+
 # make a module
 SpaDES.core::newModule(name = nm1, path = modulePath, open = FALSE,
                        events = list(
@@ -106,7 +111,9 @@ How would we run this "init" event? We use `simInit`, which parses the
 code (like loading a library or sourcing a function) then `spades` which
 executes it.
 
-```{r, eval=TRUE}
+```{r}
+#| eval: true
+
 out <- simInit(modules = nm1, paths = list(modulePath = modulePath))
 out <- spades(out)
 ```
@@ -145,7 +152,7 @@ newModule(nm2, path = modulePath, open = FALSE,
 
 And run both together. We name them both in the `module` argument. We are using `simInitAndSpades` 
 which is a shortcut to running the two function separately.
-```{r,eval=FALSE}
+```{r}
 out2 <- simInitAndSpades(module = c(nm1, nm2), paths = list(modulePath = modulePath))
 ```
 
