--- a/training/LandRDemo_coreVeg.qmd
+++ b/training/LandRDemo_coreVeg.qmd
@@ -50,9 +50,9 @@ if (!interactive()) {
 ```
 
 ::: {.callout-note appearance="simple"}
-*1.5 hours -- estimated time for 1st time executing*
+*2 hours -- estimated time for 1st time executing (includes downloads)*
 
-*12Gb RAM -- estimated RAM for executing*
+*20Gb RAM -- estimated peak RAM for executing*
 :::
 
 [LandR](https://landr-manual.predictiveecology.org/) is a forest
